--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "env-cmd": "^10.1.0",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
+    "moment": "^2.29.1",
+    "momentjs": "^2.0.0",
     "react": "^17.0.2",
+    "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.7.1",
     "react-icons": "^3.11.0",
